parser.output
Terminals unused in grammar

    T_LONG
    T_SHORT
    T_DOUBLE
    T_DO
    T_FOR
    T_SWITCH
    T_CASE
    T_DEFAULT
    T_BREAK
    T_CONTINUE
    T_STRUCT
    T_SIZEOF
    CHAR_LITERAL
    STRING_LITERAL
    MOD
    LT
    GT
    LE
    GE
    EQ
    NE
    AND
    OR
    NOT
    INC_OP
    DEC_OP
    SPACESHIP_OP
    LBRACKET
    RBRACKET
    COLON


State 37 conflicts: 4 shift/reduce
State 39 conflicts: 4 shift/reduce
State 40 conflicts: 4 shift/reduce
State 41 conflicts: 4 shift/reduce
State 42 conflicts: 4 shift/reduce
State 71 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: declaration
    5                     | function_definition

    6 function_definition: type_specifier IDENTIFIER LPAREN RPAREN compound_statement

    7 declaration: type_specifier init_declarator_list SEMICOLON

    8 init_declarator_list: init_declarator
    9                     | init_declarator_list COMMA init_declarator

   10 init_declarator: IDENTIFIER
   11                | IDENTIFIER ASSIGN expression

   12 type_specifier: T_INT
   13               | T_FLOAT
   14               | T_VOID
   15               | T_CHAR

   16 compound_statement: LBRACE statement_list RBRACE
   17                   | LBRACE RBRACE

   18 statement_list: statement
   19               | statement_list statement

   20 statement: compound_statement
   21          | expression_statement
   22          | selection_statement
   23          | iteration_statement
   24          | jump_statement
   25          | INVALID_TOKEN
   26          | error SEMICOLON

   27 expression_statement: expression SEMICOLON
   28                     | SEMICOLON

   29 selection_statement: T_IF LPAREN expression RPAREN statement
   30                    | T_IF LPAREN expression RPAREN statement T_ELSE statement

   31 iteration_statement: T_WHILE LPAREN expression RPAREN statement

   32 jump_statement: T_RETURN expression SEMICOLON
   33               | T_RETURN SEMICOLON

   34 expression: primary_expression
   35           | expression PLUS expression
   36           | expression MINUS expression
   37           | expression MUL expression
   38           | expression DIV expression
   39           | IDENTIFIER ASSIGN expression

   40 primary_expression: IDENTIFIER
   41                   | INTEGER_LITERAL
   42                   | FLOAT_LITERAL
   43                   | LPAREN expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256) 26
    T_INT (258) 12
    T_LONG (259)
    T_SHORT (260)
    T_FLOAT (261) 13
    T_DOUBLE (262)
    T_CHAR (263) 15
    T_VOID (264) 14
    T_IF (265) 29 30
    T_ELSE (266) 30
    T_WHILE (267) 31
    T_DO (268)
    T_FOR (269)
    T_SWITCH (270)
    T_CASE (271)
    T_DEFAULT (272)
    T_BREAK (273)
    T_CONTINUE (274)
    T_RETURN (275) 32 33
    T_STRUCT (276)
    T_SIZEOF (277)
    IDENTIFIER (278) 6 10 11 39 40
    INTEGER_LITERAL (279) 41
    FLOAT_LITERAL (280) 42
    CHAR_LITERAL (281)
    STRING_LITERAL (282)
    PLUS (283) 35
    MINUS (284) 36
    MUL (285) 37
    DIV (286) 38
    MOD (287)
    ASSIGN (288) 11 39
    LT (289)
    GT (290)
    LE (291)
    GE (292)
    EQ (293)
    NE (294)
    AND (295)
    OR (296)
    NOT (297)
    INC_OP (298)
    DEC_OP (299)
    SPACESHIP_OP (300)
    LPAREN (301) 6 29 30 31 43
    RPAREN (302) 6 29 30 31 43
    LBRACE (303) 16 17
    RBRACE (304) 16 17
    LBRACKET (305)
    RBRACKET (306)
    SEMICOLON (307) 7 26 27 28 32 33
    COMMA (308) 9
    COLON (309)
    INVALID_TOKEN (310) 25


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    program (57)
        on left: 1
        on right: 0
    translation_unit (58)
        on left: 2 3
        on right: 1 3
    external_declaration (59)
        on left: 4 5
        on right: 2 3
    function_definition (60)
        on left: 6
        on right: 5
    declaration (61)
        on left: 7
        on right: 4
    init_declarator_list (62)
        on left: 8 9
        on right: 7 9
    init_declarator (63)
        on left: 10 11
        on right: 8 9
    type_specifier (64)
        on left: 12 13 14 15
        on right: 6 7
    compound_statement (65)
        on left: 16 17
        on right: 6 20
    statement_list (66)
        on left: 18 19
        on right: 16 19
    statement (67)
        on left: 20 21 22 23 24 25 26
        on right: 18 19 29 30 31
    expression_statement (68)
        on left: 27 28
        on right: 21
    selection_statement (69)
        on left: 29 30
        on right: 22
    iteration_statement (70)
        on left: 31
        on right: 23
    jump_statement (71)
        on left: 32 33
        on right: 24
    expression (72)
        on left: 34 35 36 37 38 39
        on right: 11 27 29 30 31 32 35 36 37 38 39 43
    primary_expression (73)
        on left: 40 41 42 43
        on right: 34


State 0

    0 $accept: . program $end

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_CHAR   shift, and go to state 3
    T_VOID   shift, and go to state 4

    program               go to state 5
    translation_unit      go to state 6
    external_declaration  go to state 7
    function_definition   go to state 8
    declaration           go to state 9
    type_specifier        go to state 10


State 1

   12 type_specifier: T_INT .

    $default  reduce using rule 12 (type_specifier)


State 2

   13 type_specifier: T_FLOAT .

    $default  reduce using rule 13 (type_specifier)


State 3

   15 type_specifier: T_CHAR .

    $default  reduce using rule 15 (type_specifier)


State 4

   14 type_specifier: T_VOID .

    $default  reduce using rule 14 (type_specifier)


State 5

    0 $accept: program . $end

    $end  shift, and go to state 11


State 6

    1 program: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_CHAR   shift, and go to state 3
    T_VOID   shift, and go to state 4

    $default  reduce using rule 1 (program)

    external_declaration  go to state 12
    function_definition   go to state 8
    declaration           go to state 9
    type_specifier        go to state 10


State 7

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 8

    5 external_declaration: function_definition .

    $default  reduce using rule 5 (external_declaration)


State 9

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 10

    6 function_definition: type_specifier . IDENTIFIER LPAREN RPAREN compound_statement
    7 declaration: type_specifier . init_declarator_list SEMICOLON

    IDENTIFIER  shift, and go to state 13

    init_declarator_list  go to state 14
    init_declarator       go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 13

    6 function_definition: type_specifier IDENTIFIER . LPAREN RPAREN compound_statement
   10 init_declarator: IDENTIFIER .
   11                | IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 16
    LPAREN  shift, and go to state 17

    $default  reduce using rule 10 (init_declarator)


State 14

    7 declaration: type_specifier init_declarator_list . SEMICOLON
    9 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 18
    COMMA      shift, and go to state 19


State 15

    8 init_declarator_list: init_declarator .

    $default  reduce using rule 8 (init_declarator_list)


State 16

   11 init_declarator: IDENTIFIER ASSIGN . expression

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23

    expression          go to state 24
    primary_expression  go to state 25


State 17

    6 function_definition: type_specifier IDENTIFIER LPAREN . RPAREN compound_statement

    RPAREN  shift, and go to state 26


State 18

    7 declaration: type_specifier init_declarator_list SEMICOLON .

    $default  reduce using rule 7 (declaration)


State 19

    9 init_declarator_list: init_declarator_list COMMA . init_declarator

    IDENTIFIER  shift, and go to state 27

    init_declarator  go to state 28


State 20

   39 expression: IDENTIFIER . ASSIGN expression
   40 primary_expression: IDENTIFIER .

    ASSIGN  shift, and go to state 29

    $default  reduce using rule 40 (primary_expression)


State 21

   41 primary_expression: INTEGER_LITERAL .

    $default  reduce using rule 41 (primary_expression)


State 22

   42 primary_expression: FLOAT_LITERAL .

    $default  reduce using rule 42 (primary_expression)


State 23

   43 primary_expression: LPAREN . expression RPAREN

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23

    expression          go to state 30
    primary_expression  go to state 25


State 24

   11 init_declarator: IDENTIFIER ASSIGN expression .
   35 expression: expression . PLUS expression
   36           | expression . MINUS expression
   37           | expression . MUL expression
   38           | expression . DIV expression

    PLUS   shift, and go to state 31
    MINUS  shift, and go to state 32
    MUL    shift, and go to state 33
    DIV    shift, and go to state 34

    $default  reduce using rule 11 (init_declarator)


State 25

   34 expression: primary_expression .

    $default  reduce using rule 34 (expression)


State 26

    6 function_definition: type_specifier IDENTIFIER LPAREN RPAREN . compound_statement

    LBRACE  shift, and go to state 35

    compound_statement  go to state 36


State 27

   10 init_declarator: IDENTIFIER .
   11                | IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 16

    $default  reduce using rule 10 (init_declarator)


State 28

    9 init_declarator_list: init_declarator_list COMMA init_declarator .

    $default  reduce using rule 9 (init_declarator_list)


State 29

   39 expression: IDENTIFIER ASSIGN . expression

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23

    expression          go to state 37
    primary_expression  go to state 25


State 30

   35 expression: expression . PLUS expression
   36           | expression . MINUS expression
   37           | expression . MUL expression
   38           | expression . DIV expression
   43 primary_expression: LPAREN expression . RPAREN

    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    MUL     shift, and go to state 33
    DIV     shift, and go to state 34
    RPAREN  shift, and go to state 38


State 31

   35 expression: expression PLUS . expression

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23

    expression          go to state 39
    primary_expression  go to state 25


State 32

   36 expression: expression MINUS . expression

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23

    expression          go to state 40
    primary_expression  go to state 25


State 33

   37 expression: expression MUL . expression

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23

    expression          go to state 41
    primary_expression  go to state 25


State 34

   38 expression: expression DIV . expression

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23

    expression          go to state 42
    primary_expression  go to state 25


State 35

   16 compound_statement: LBRACE . statement_list RBRACE
   17                   | LBRACE . RBRACE

    error            shift, and go to state 43
    T_IF             shift, and go to state 44
    T_WHILE          shift, and go to state 45
    T_RETURN         shift, and go to state 46
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23
    LBRACE           shift, and go to state 35
    RBRACE           shift, and go to state 47
    SEMICOLON        shift, and go to state 48
    INVALID_TOKEN    shift, and go to state 49

    compound_statement    go to state 50
    statement_list        go to state 51
    statement             go to state 52
    expression_statement  go to state 53
    selection_statement   go to state 54
    iteration_statement   go to state 55
    jump_statement        go to state 56
    expression            go to state 57
    primary_expression    go to state 25


State 36

    6 function_definition: type_specifier IDENTIFIER LPAREN RPAREN compound_statement .

    $default  reduce using rule 6 (function_definition)


State 37

   35 expression: expression . PLUS expression
   36           | expression . MINUS expression
   37           | expression . MUL expression
   38           | expression . DIV expression
   39           | IDENTIFIER ASSIGN expression .

    PLUS   shift, and go to state 31
    MINUS  shift, and go to state 32
    MUL    shift, and go to state 33
    DIV    shift, and go to state 34

    PLUS      [reduce using rule 39 (expression)]
    MINUS     [reduce using rule 39 (expression)]
    MUL       [reduce using rule 39 (expression)]
    DIV       [reduce using rule 39 (expression)]
    $default  reduce using rule 39 (expression)


State 38

   43 primary_expression: LPAREN expression RPAREN .

    $default  reduce using rule 43 (primary_expression)


State 39

   35 expression: expression . PLUS expression
   35           | expression PLUS expression .
   36           | expression . MINUS expression
   37           | expression . MUL expression
   38           | expression . DIV expression

    PLUS   shift, and go to state 31
    MINUS  shift, and go to state 32
    MUL    shift, and go to state 33
    DIV    shift, and go to state 34

    PLUS      [reduce using rule 35 (expression)]
    MINUS     [reduce using rule 35 (expression)]
    MUL       [reduce using rule 35 (expression)]
    DIV       [reduce using rule 35 (expression)]
    $default  reduce using rule 35 (expression)


State 40

   35 expression: expression . PLUS expression
   36           | expression . MINUS expression
   36           | expression MINUS expression .
   37           | expression . MUL expression
   38           | expression . DIV expression

    PLUS   shift, and go to state 31
    MINUS  shift, and go to state 32
    MUL    shift, and go to state 33
    DIV    shift, and go to state 34

    PLUS      [reduce using rule 36 (expression)]
    MINUS     [reduce using rule 36 (expression)]
    MUL       [reduce using rule 36 (expression)]
    DIV       [reduce using rule 36 (expression)]
    $default  reduce using rule 36 (expression)


State 41

   35 expression: expression . PLUS expression
   36           | expression . MINUS expression
   37           | expression . MUL expression
   37           | expression MUL expression .
   38           | expression . DIV expression

    PLUS   shift, and go to state 31
    MINUS  shift, and go to state 32
    MUL    shift, and go to state 33
    DIV    shift, and go to state 34

    PLUS      [reduce using rule 37 (expression)]
    MINUS     [reduce using rule 37 (expression)]
    MUL       [reduce using rule 37 (expression)]
    DIV       [reduce using rule 37 (expression)]
    $default  reduce using rule 37 (expression)


State 42

   35 expression: expression . PLUS expression
   36           | expression . MINUS expression
   37           | expression . MUL expression
   38           | expression . DIV expression
   38           | expression DIV expression .

    PLUS   shift, and go to state 31
    MINUS  shift, and go to state 32
    MUL    shift, and go to state 33
    DIV    shift, and go to state 34

    PLUS      [reduce using rule 38 (expression)]
    MINUS     [reduce using rule 38 (expression)]
    MUL       [reduce using rule 38 (expression)]
    DIV       [reduce using rule 38 (expression)]
    $default  reduce using rule 38 (expression)


State 43

   26 statement: error . SEMICOLON

    SEMICOLON  shift, and go to state 58


State 44

   29 selection_statement: T_IF . LPAREN expression RPAREN statement
   30                    | T_IF . LPAREN expression RPAREN statement T_ELSE statement

    LPAREN  shift, and go to state 59


State 45

   31 iteration_statement: T_WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 60


State 46

   32 jump_statement: T_RETURN . expression SEMICOLON
   33               | T_RETURN . SEMICOLON

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23
    SEMICOLON        shift, and go to state 61

    expression          go to state 62
    primary_expression  go to state 25


State 47

   17 compound_statement: LBRACE RBRACE .

    $default  reduce using rule 17 (compound_statement)


State 48

   28 expression_statement: SEMICOLON .

    $default  reduce using rule 28 (expression_statement)


State 49

   25 statement: INVALID_TOKEN .

    $default  reduce using rule 25 (statement)


State 50

   20 statement: compound_statement .

    $default  reduce using rule 20 (statement)


State 51

   16 compound_statement: LBRACE statement_list . RBRACE
   19 statement_list: statement_list . statement

    error            shift, and go to state 43
    T_IF             shift, and go to state 44
    T_WHILE          shift, and go to state 45
    T_RETURN         shift, and go to state 46
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23
    LBRACE           shift, and go to state 35
    RBRACE           shift, and go to state 63
    SEMICOLON        shift, and go to state 48
    INVALID_TOKEN    shift, and go to state 49

    compound_statement    go to state 50
    statement             go to state 64
    expression_statement  go to state 53
    selection_statement   go to state 54
    iteration_statement   go to state 55
    jump_statement        go to state 56
    expression            go to state 57
    primary_expression    go to state 25


State 52

   18 statement_list: statement .

    $default  reduce using rule 18 (statement_list)


State 53

   21 statement: expression_statement .

    $default  reduce using rule 21 (statement)


State 54

   22 statement: selection_statement .

    $default  reduce using rule 22 (statement)


State 55

   23 statement: iteration_statement .

    $default  reduce using rule 23 (statement)


State 56

   24 statement: jump_statement .

    $default  reduce using rule 24 (statement)


State 57

   27 expression_statement: expression . SEMICOLON
   35 expression: expression . PLUS expression
   36           | expression . MINUS expression
   37           | expression . MUL expression
   38           | expression . DIV expression

    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
    MUL        shift, and go to state 33
    DIV        shift, and go to state 34
    SEMICOLON  shift, and go to state 65


State 58

   26 statement: error SEMICOLON .

    $default  reduce using rule 26 (statement)


State 59

   29 selection_statement: T_IF LPAREN . expression RPAREN statement
   30                    | T_IF LPAREN . expression RPAREN statement T_ELSE statement

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23

    expression          go to state 66
    primary_expression  go to state 25


State 60

   31 iteration_statement: T_WHILE LPAREN . expression RPAREN statement

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23

    expression          go to state 67
    primary_expression  go to state 25


State 61

   33 jump_statement: T_RETURN SEMICOLON .

    $default  reduce using rule 33 (jump_statement)


State 62

   32 jump_statement: T_RETURN expression . SEMICOLON
   35 expression: expression . PLUS expression
   36           | expression . MINUS expression
   37           | expression . MUL expression
   38           | expression . DIV expression

    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
    MUL        shift, and go to state 33
    DIV        shift, and go to state 34
    SEMICOLON  shift, and go to state 68


State 63

   16 compound_statement: LBRACE statement_list RBRACE .

    $default  reduce using rule 16 (compound_statement)


State 64

   19 statement_list: statement_list statement .

    $default  reduce using rule 19 (statement_list)


State 65

   27 expression_statement: expression SEMICOLON .

    $default  reduce using rule 27 (expression_statement)


State 66

   29 selection_statement: T_IF LPAREN expression . RPAREN statement
   30                    | T_IF LPAREN expression . RPAREN statement T_ELSE statement
   35 expression: expression . PLUS expression
   36           | expression . MINUS expression
   37           | expression . MUL expression
   38           | expression . DIV expression

    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    MUL     shift, and go to state 33
    DIV     shift, and go to state 34
    RPAREN  shift, and go to state 69


State 67

   31 iteration_statement: T_WHILE LPAREN expression . RPAREN statement
   35 expression: expression . PLUS expression
   36           | expression . MINUS expression
   37           | expression . MUL expression
   38           | expression . DIV expression

    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    MUL     shift, and go to state 33
    DIV     shift, and go to state 34
    RPAREN  shift, and go to state 70


State 68

   32 jump_statement: T_RETURN expression SEMICOLON .

    $default  reduce using rule 32 (jump_statement)


State 69

   29 selection_statement: T_IF LPAREN expression RPAREN . statement
   30                    | T_IF LPAREN expression RPAREN . statement T_ELSE statement

    error            shift, and go to state 43
    T_IF             shift, and go to state 44
    T_WHILE          shift, and go to state 45
    T_RETURN         shift, and go to state 46
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23
    LBRACE           shift, and go to state 35
    SEMICOLON        shift, and go to state 48
    INVALID_TOKEN    shift, and go to state 49

    compound_statement    go to state 50
    statement             go to state 71
    expression_statement  go to state 53
    selection_statement   go to state 54
    iteration_statement   go to state 55
    jump_statement        go to state 56
    expression            go to state 57
    primary_expression    go to state 25


State 70

   31 iteration_statement: T_WHILE LPAREN expression RPAREN . statement

    error            shift, and go to state 43
    T_IF             shift, and go to state 44
    T_WHILE          shift, and go to state 45
    T_RETURN         shift, and go to state 46
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23
    LBRACE           shift, and go to state 35
    SEMICOLON        shift, and go to state 48
    INVALID_TOKEN    shift, and go to state 49

    compound_statement    go to state 50
    statement             go to state 72
    expression_statement  go to state 53
    selection_statement   go to state 54
    iteration_statement   go to state 55
    jump_statement        go to state 56
    expression            go to state 57
    primary_expression    go to state 25


State 71

   29 selection_statement: T_IF LPAREN expression RPAREN statement .
   30                    | T_IF LPAREN expression RPAREN statement . T_ELSE statement

    T_ELSE  shift, and go to state 73

    T_ELSE    [reduce using rule 29 (selection_statement)]
    $default  reduce using rule 29 (selection_statement)


State 72

   31 iteration_statement: T_WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 31 (iteration_statement)


State 73

   30 selection_statement: T_IF LPAREN expression RPAREN statement T_ELSE . statement

    error            shift, and go to state 43
    T_IF             shift, and go to state 44
    T_WHILE          shift, and go to state 45
    T_RETURN         shift, and go to state 46
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    LPAREN           shift, and go to state 23
    LBRACE           shift, and go to state 35
    SEMICOLON        shift, and go to state 48
    INVALID_TOKEN    shift, and go to state 49

    compound_statement    go to state 50
    statement             go to state 74
    expression_statement  go to state 53
    selection_statement   go to state 54
    iteration_statement   go to state 55
    jump_statement        go to state 56
    expression            go to state 57
    primary_expression    go to state 25


State 74

   30 selection_statement: T_IF LPAREN expression RPAREN statement T_ELSE statement .

    $default  reduce using rule 30 (selection_statement)
